<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/detailHabitIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/icon_circle_bg"
        android:padding="16dp"
        android:src="@drawable/bolt"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/detailHabitName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_name"
        android:fontFamily="@font/b612_mono"
        android:textSize="26sp"
        android:textStyle="bold"
        android:paddingBottom="6dp"/>

    <TextView
        android:id="@+id/detailHabitStreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habitDetailStreak"
        android:fontFamily="@font/anta"
        android:textSize="18sp"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/detailHabitGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habitDetailGoal"
        android:fontFamily="@font/anta"
        android:textSize="18sp"
        android:paddingBottom="4dp"/>

    <TextView
        android:id="@+id/detailHabitStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habitDetailDate"
        android:fontFamily="@font/anta"
        android:textSize="14sp"
        android:paddingBottom="18dp"/>

    <Button
        android:id="@+id/btnMarkDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habitDetailBtn1"
        android:fontFamily="@font/anta"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="18dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitDetailNotes"
            android:fontFamily="@font/b612_mono"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="4dp"/>

        <EditText
            android:id="@+id/editHabitNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="6dp"
            tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/detailCompletionHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/b612_mono"
            android:text="@string/habitDetailHistory"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"/>

        <LinearLayout
            android:id="@+id/completionHistoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:layout_marginBottom="18dp"
        android:layout_marginHorizontal="16dp">

        <Button
            android:id="@+id/btnEditHabit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/habitDetailBtn2"
            android:fontFamily="@font/anta"
            tools:ignore="ButtonStyle,VisualLintButtonSize,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnDeleteHabit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/habitDetailBtn3"
            android:fontFamily="@font/anta"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle,VisualLintButtonSize,TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/detailHabitMotivation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habitDetailMotivation"
        android:textSize="15sp"
        android:textColor="@android:color/holo_green_dark"
        android:gravity="center"
        android:paddingTop="28dp"
        android:paddingBottom="24dp"/>
</LinearLayout>
