<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="?android:attr/windowBackground">

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SettingsTitle"
        android:fontFamily="@font/b612_mono"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:paddingBottom="22dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="18dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/DarkTitle"
            android:fontFamily="@font/anta"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <Switch
            android:id="@+id/darkModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/switch_thumb_color"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/NotificationTitle"
            android:fontFamily="@font/anta"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <Switch
            android:id="@+id/notificationsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:thumbTint="@color/switch_thumb_color"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ECECEC"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/SupportTitle"
            android:fontFamily="@font/anta"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/ic_menu_send"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ECECEC"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/AboutTitle"
            android:fontFamily="@font/anta"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@android:drawable/ic_menu_info_details"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="32dp"
        android:text="@string/Thanks"
        android:fontFamily="@font/anta"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="16sp"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
